[tests] Disable weak-fields.exe on FullAOT as well
(cherry picked from commit 399c2c89c7c11ac8843f15269567bc9cde6fa1c0)

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -904,6 +904,10 @@ PROFILE_DISABLED_TESTS += \
 	appdomain-loader.exe \
 	assemblyresolve_event3.exe \
 	appdomain-serialize-exception.exe
+
+# https://bugzilla.xamarin.com/show_bug.cgi?id=60973
+PROFILE_DISABLED_TESTS += \
+	weak-fields.exe
 endif
 
 if HYBRID_AOT_TESTS
