[tests] Disable weak-fields.exe on FullAOT as well

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -888,6 +888,10 @@ PROFILE_DISABLED_TESTS += \
 	appdomain-loader.exe \
 	assemblyresolve_event3.exe \
 	appdomain-serialize-exception.exe
+
+# https://bugzilla.xamarin.com/show_bug.cgi?id=60973
+PROFILE_DISABLED_TESTS += \
+	weak-fields.exe
 endif
 
 if HYBRID_AOT_TESTS
@@ -1068,6 +1072,7 @@ INTERP_DISABLED_TESTS = \
 	vararg.exe \
 	vararg2.exe \
 	vt-sync-method.exe \
+	weak-fields.exe \
 	winx64structs.exe \
 	xdomain-threads.exe
 
