--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -529,7 +529,8 @@ TESTS_CS_SRC=		\
 	recursive-struct-arrays.cs \
 	bug-59281.cs	\
 	init_array_with_lazy_type.cs \
-	weak-fields.cs
+	weak-fields.cs \
+	threads-leak.cs
 
 if AMD64
 TESTS_CS_SRC += async-exc-compilation.cs finally_guard.cs finally_block_ending_in_dead_bb.cs
