--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -521,7 +521,8 @@ TESTS_CS_SRC=		\
 	bug-58782-plain-throw.cs \
 	bug-58782-capture-and-throw.cs \
 	recursive-struct-arrays.cs \
-	bug-59281.cs
+	bug-59281.cs \
+	threads-leak.cs
 
 if AMD64
 TESTS_CS_SRC += async-exc-compilation.cs finally_guard.cs finally_block_ending_in_dead_bb.cs
