--- a/mcs/tools/Makefile
+++ b/mcs/tools/Makefile
@@ -50,7 +50,7 @@ net_4_5_dirs := \
 	linker-analyzer
 
 build_SUBDIRS = resgen gacutil security culevel cil-stringreplacer commoncryptogenerator resx2sr linker
-monodroid_tools_SUBDIRS = cil-strip mkbundle mdoc mono-symbolicate
+monodroid_tools_SUBDIRS = cil-strip linker-analyzer mkbundle mdoc mono-symbolicate
 net_4_5_SUBDIRS = gacutil
 net_4_x_SUBDIRS = gacutil
 net_4_5_PARALLEL_SUBDIRS = $(net_4_5_dirs)
