[ios-sdk] Fix device builds.

--- a/sdks/ios/Makefile
+++ b/sdks/ios/Makefile
@@ -144,7 +144,7 @@ System.Data_EXTRA_FILES = ../../mcs/class/System.Data/Test
 System.Data_ARGS = $(NUNIT) monotouch_System.Data_test.dll
 System.Net.Http_ASSEMBLIES = $(BCL_DIR)/System.Net.Http.dll $(TESTDIR)/monotouch_System.Net.Http_test.dll
 System.Net.Http_ARGS = $(NUNIT) monotouch_System.Net.Http_test.dll
-System.Numerics_ASSEMBLIES = $(BCL_DIR)/System.Numerics.dll $(TESTDIR)/monotouch_System.Numerics_test.dll
+System.Numerics_ASSEMBLIES = $(TESTDIR)/monotouch_System.Numerics_test.dll
 System.Numerics_ARGS = $(NUNIT) monotouch_System.Numerics_test.dll
 System.Runtime.Serialization_ASSEMBLIES = $(BCL_DIR)/System.Runtime.Serialization.dll $(BCL_DIR)/System.ServiceModel.dll $(BCL_DIR)/System.ServiceModel.Internals.dll $(TESTDIR)/monotouch_System.Runtime.Serialization_test.dll
 System.Runtime.Serialization_ARGS = $(NUNIT) monotouch_System.Runtime.Serialization_test.dll
@@ -172,7 +172,7 @@ System.Xml_ASSEMBLIES = $(BCL_DIR)/System.Xml.dll $(TESTDIR)/monotouch_System.Xm
 System.Xml_ARGS = $(NUNIT) monotouch_System.Xml_test.dll
 System.Xml.Linq_ASSEMBLIES = $(BCL_DIR)/System.Xml.Linq.dll $(TESTDIR)/monotouch_System.Xml.Linq_test.dll
 System.Xml.Linq_ARGS = $(NUNIT) monotouch_System.Xml.Linq_test.dll
-Mono.Security_ASSEMBLIES = $(BCL_DIR)/Mono.Security.dll $(TESTDIR)/monotouch_Mono.Security_test.dll
+Mono.Security_ASSEMBLIES = $(TESTDIR)/monotouch_Mono.Security_test.dll
 Mono.Security_ARGS = $(NUNIT) monotouch_Mono.Security_test.dll
 System.ServiceModel.Web_ASSEMBLIES = $(BCL_DIR)/System.ServiceModel.Web.dll $(BCL_DIR)/System.ServiceModel.dll $(BCL_DIR)/System.ServiceModel.Internals.dll $(BCL_DIR)/System.IdentityModel.dll $(BCL_DIR)/System.Runtime.Serialization.dll $(TESTDIR)/monotouch_System.ServiceModel.Web_test.dll
 System.ServiceModel.Web_ARGS = $(NUNIT) monotouch_System.ServiceModel.Web_test.dll
