[linker-analyzer] Rename the tool to illinkanalyzer
As per discussion in https://github.com/mono/mono/pull/6168

--- a/mcs/tools/linker-analyzer/Makefile
+++ b/mcs/tools/linker-analyzer/Makefile
@@ -2,7 +2,7 @@ thisdir = tools/linker-analyzer
 SUBDIRS =
 include ../../build/rules.make
 
-PROGRAM = linkeranalyzer.exe
+PROGRAM = illinkanalyzer.exe
 
 LIB_REFS = System System.Xml System.Core
 LOCAL_MCS_FLAGS =
