--- a/mcs/tools/linker-analyzer/illinkanalyzer-net_4_x.csproj
+++ b/mcs/tools/linker-analyzer/illinkanalyzer-net_4_x.csproj
@@ -23,7 +23,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>
     </RootNamespace>
-    <AssemblyName>linkeranalyzer</AssemblyName>
+    <AssemblyName>illinkanalyzer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
 
