Fix TimeZoneInfo local time on platforms that do not have tzdata
CreateLocal works by checking the platform. If it is windows, it uses the windows API or registry depending on api version, UWP, etc. otherwise it checks for the $TZ environment variable. If thats not found. it looks for /etc/localtime.....more obscure platforms like WebGL have no means of obtaining tzdata this way. This means that CreateLocal falls back to setting the TimeZoneInfo.Local time to UTC....this causes functions like DateTime.Now and DateTime.ToLocalTime to convert to UTC, instead of the user's local time.  By using Mono's old icall, we won't be able to convert between arbitrary timezones, but basic time conversion, such as UTC to Local will work.

--- a/msvc/libmonoruntime-unity.targets.filters
+++ b/msvc/libmonoruntime-unity.targets.filters
@@ -16,6 +16,10 @@
     <ClInclude Include="$(MonoSourceLocation)\mono\metadata\unity-utils.h">
       <Filter>Header Files$(MonoRuntimeFilterSubFolder)\unity</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\unity-icall.c">
+      <Filter>Source Files$(MonoRuntimeFilterSubFolder)\unity</Filter>
+    </ClCompile>
+
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files$(MonoRuntimeFilterSubFolder)\unity">
