[interp] Reenable thunks.exe on arm
It fails due to the known RGCTX register clobbering by trampolines.

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -725,6 +725,7 @@ INTERP_PLATFORM_DISABLED_TESTS= \
 	delegate-exit.exe \
 	delegate1.exe \
 	delegate3.exe \
+	thunks.exe \
 	finalizer-exception.exe \
 	monitor-abort.exe
 endif
