[runtime] Enable dim-methodimpl.exe test.

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -969,8 +969,7 @@ KNOWN_FAILING_TESTS = \
 	appdomain-marshalbyref-assemblyload.exe	\
 	abort-try-holes.exe \
 	dim-constrainedcall.exe	\
-	dim-diamondshape.exe	\
-	dim-methodimpl.exe
+	dim-diamondshape.exe
 
 DISABLED_TESTS = \
 	$(KNOWN_FAILING_TESTS) \
