improving Makefile but still a ways to go

--- a/mcs/class/Mono.Security/Test/Mono.Security.Authenticode/Formatter/Makefile
+++ b/mcs/class/Mono.Security/Test/Mono.Security.Authenticode/Formatter/Makefile
@@ -1,12 +1,23 @@
-NONO_PATH ?= /inst/m6/lib
+MONO_PATH ?= /inst/m6/lib
+
+.NOISY:
 
 all: writefiles hashfile.exe
 
 clean:
-	-rm writefiles hashfile.exe
+	rm -f writefiles hashfile.exe
 
 writefiles: writefiles.cpp
 	g++ writefiles.cpp -o $@
 
+test check run: all
+	./writefiles
+	set -e
+	set -x
+	for a in *.dll ; do \
+	 	echo mono ./hashfile.exe $$a; \
+	 	mono ./hashfile.exe $$a; \
+	 done
+
 hashfile.exe: hashfile.cs
-	mcs hashfile.cs /r:$(NONO_PATH)/mono/4.7.1-api/Mono.Security.dll
+	mcs hashfile.cs /r:$(MONO_PATH)/mono/4.7.1-api/Mono.Security.dll
